# natsukashii

./: .gitignore  CMakeLists.txt
include/: common.h  core.h  mainwindow.h
include/core/: apu.h  bus.h  cpu.h  mem.h  ppu.h  scheduler.h
src/: core.cpp  main.cpp  mainwindow.cpp
src/core/: apu.cpp  bus.cpp  cpu.cpp  ppu.cpp  scheduler.cpp
src/core/mbc/: mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  nombc.cpp
